--- a/apps/weather.css
+++ b/apps/weather.css
@@ -1,3 +1,44 @@
 .pos-topRight{
     color: white;
 }
+
+#pos-topRight{
+    width: 100%;
+    height: 100%;
+    left: 0;
+}
+
+#pos-topRight *{
+}
+
+#iconHolder{
+    top:17px;
+}
+
+#iconHolder *{
+}
+
+#tempTextHolder{
+    left: 60px;
+}
+
+#tempTextHolder *{
+    margin: 0;
+    font-size: 84px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    color: #BBBBBB;
+}
+
+#unitHolder{
+    padding: 0;
+    left: 155px;
+    top: 15px;
+}
+
+#unitHolder *{
+    font-size: 30px;
+    margin: 0;
+    font-weight: 100;
+    color: #DDDDDD;
+}
