--- a/apps/time/time.css
+++ b/apps/time/time.css
@@ -6,7 +6,7 @@
 }
 
 #pos-topLeft .timeText{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 200;
     font-size: 75px;
     margin: 0;
@@ -15,7 +15,7 @@
 }
 
 #pos-topLeft .ampm{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 25px;
     margin: 0;
