--- a/apps/weather/currentWeather.css
+++ b/apps/weather/currentWeather.css
@@ -16,8 +16,8 @@
 #pos-topRight .tempTextHolder *{
     margin: 0;
     font-size: 84px;
-    font-family: 'Lato', sans-serif;
-    font-weight: 200;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
     color: #BBBBBB;
 }
 
@@ -28,7 +28,7 @@
 }
 
 #pos-topRight .unitHolder *{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 30px;
     margin: 0;
     font-weight: 100;
